feat: add iron directional pipe with wrench tool

--- a/src/main/resources/assets/logistics/lang/en_us.json
+++ b/src/main/resources/assets/logistics/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "item.logistics.wrench": "Wrench",
   "block.logistics.cobblestone_pipe": "Cobblestone Transport Pipe",
   "block.logistics.stone_pipe": "Stone Transport Pipe",
   "block.logistics.wood_pipe": "Wooden Transport Pipe",
