update pipe names to use more generic terms

--- a/src/main/resources/assets/logistics/lang/en_us.json
+++ b/src/main/resources/assets/logistics/lang/en_us.json
@@ -1,14 +1,13 @@
 {
   "item.logistics.wrench": "Wrench",
-  "block.logistics.cobblestone_transport_pipe": "Cobblestone Transport Pipe",
-  "block.logistics.stone_transport_pipe": "Stone Transport Pipe",
-  "block.logistics.wooden_transport_pipe": "Wooden Transport Pipe",
-  "block.logistics.iron_transport_pipe": "Iron Transport Pipe",
+  "block.logistics.basic_splitter_pipe": "Basic Splitter Pipe",
+  "block.logistics.basic_extractor_pipe": "Basic Extractor Pipe",
+  "block.logistics.basic_merger_pipe": "Basic Merger Pipe",
   "block.logistics.gold_transport_pipe": "Golden Transport Pipe",
-  "block.logistics.diamond_transport_pipe": "Diamond Transport Pipe",
+  "block.logistics.smart_splitter_pipe": "Smart Splitter Pipe",
   "block.logistics.copper_transport_pipe": "Copper Transport Pipe",
-  "block.logistics.quartz_transport_pipe": "Quartz Transport Pipe",
-  "block.logistics.void_transport_pipe": "Void Transport Pipe",
+  "block.logistics.comparator_pipe": "Comparator Pipe",
+  "block.logistics.void_pipe": "Void Pipe",
   "itemgroup.logistics.transport": "Logistics: Transport",
-  "screen.logistics.diamond_filter": "Diamond Pipe Filters"
+  "screen.logistics.smart_splitter_filter": "Smart Splitter Filters"
 }
