--- a/src/main/resources/assets/logistics/lang/en_us.json
+++ b/src/main/resources/assets/logistics/lang/en_us.json
@@ -8,6 +8,7 @@
   "block.logistics.stone_transport_pipe": "Stone Transport Pipe",
   "block.logistics.item_passthrough_pipe": "Item Passthrough Pipe",
   "block.logistics.item_sensor_pipe": "Item Sensor Pipe",
+  "block.logistics.item_insertion_pipe": "Item Insertion Pipe",
   "block.logistics.item_void_pipe": "Item Void Pipe",
   "itemgroup.logistics.transport": "Logistics: Transport",
   "screen.logistics.item_filter": "Item Filter"
