--- a/src/main/resources/assets/logistics/lang/en_us.json
+++ b/src/main/resources/assets/logistics/lang/en_us.json
@@ -11,20 +11,20 @@
   "block.logistics.item_void_pipe": "Item Void Pipe",
   "itemgroup.logistics.transport": "Logistics: Transport",
   "screen.logistics.item_filter": "Item Filter",
-  "item.logistics.dykem_white": "Dykem White",
-  "item.logistics.dykem_orange": "Dykem Orange",
-  "item.logistics.dykem_magenta": "Dykem Magenta",
-  "item.logistics.dykem_light_blue": "Dykem Light Blue",
-  "item.logistics.dykem_yellow": "Dykem Yellow",
-  "item.logistics.dykem_lime": "Dykem Lime",
-  "item.logistics.dykem_pink": "Dykem Pink",
-  "item.logistics.dykem_gray": "Dykem Gray",
-  "item.logistics.dykem_light_gray": "Dykem Light Gray",
-  "item.logistics.dykem_cyan": "Dykem Cyan",
-  "item.logistics.dykem_purple": "Dykem Purple",
-  "item.logistics.dykem_blue": "Dykem Blue",
-  "item.logistics.dykem_brown": "Dykem Brown",
-  "item.logistics.dykem_green": "Dykem Green",
-  "item.logistics.dykem_red": "Dykem Red",
-  "item.logistics.dykem_black": "Dykem Black"
+  "item.logistics.marking_fluid_white": "White Marking Fluid",
+  "item.logistics.marking_fluid_orange": "Orange Marking Fluid",
+  "item.logistics.marking_fluid_magenta": "Magenta Marking Fluid",
+  "item.logistics.marking_fluid_light_blue": "Light Blue Marking Fluid",
+  "item.logistics.marking_fluid_yellow": "Yellow Marking Fluid",
+  "item.logistics.marking_fluid_lime": "Lime Marking Fluid",
+  "item.logistics.marking_fluid_pink": "Pink Marking Fluid",
+  "item.logistics.marking_fluid_gray": "Gray Marking Fluid",
+  "item.logistics.marking_fluid_light_gray": "Light Gray Marking Fluid",
+  "item.logistics.marking_fluid_cyan": "Cyan Marking Fluid",
+  "item.logistics.marking_fluid_purple": "Purple Marking Fluid",
+  "item.logistics.marking_fluid_blue": "Blue Marking Fluid",
+  "item.logistics.marking_fluid_brown": "Brown Marking Fluid",
+  "item.logistics.marking_fluid_green": "Green Marking Fluid",
+  "item.logistics.marking_fluid_red": "Red Marking Fluid",
+  "item.logistics.marking_fluid_black": "Black Marking Fluid"
 }
