Render marker laser beams with new beam model and block entity renderer

--- a/src/main/resources/assets/logistics/lang/en_us.json
+++ b/src/main/resources/assets/logistics/lang/en_us.json
@@ -41,5 +41,6 @@
   "item.logistics.netherite_gear": "Netherite Gear",
   "itemgroup.logistics.transport": "Logistics: Transport",
   "screen.logistics.item_filter": "Item Filter",
-  "block.logistics.quarry": "Quarry"
+  "block.logistics.quarry": "Quarry",
+  "block.logistics.marker": "Marker"
 }
