--- a/src/main/resources/assets/logistics/lang/en_us.json
+++ b/src/main/resources/assets/logistics/lang/en_us.json
@@ -54,6 +54,6 @@
   "block.logistics.power.stirling_engine": "Stirling Engine",
   "block.logistics.power.creative_engine": "Creative Engine",
   "block.logistics.power.creative_sink": "Creative Sink",
-  "item.logistics.power.engine_probe": "Engine Probe",
+  "item.logistics.core.probe": "Creative Probe",
   "message.logistics.power.creative_sink.drain_rate": "Creative Sink: %s E/t"
 }
